--- a/new_html/discussion_board.html
+++ b/new_html/discussion_board.html
@@ -15,9 +15,9 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
+
     <link href="css/agency_other.css" rel="stylesheet">
     <link href="css/custom_discussion_board.css" rel="stylesheet">
-
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
@@ -126,26 +126,7 @@
         <div class="row">
             <div class="col-lg-5"></div>
             <div class="col-lg-2">
-                <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">New Post</button>
-                <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="display: none;">
-                    <div class="modal-dialog">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                                <h4 class="modal-title" id="myModalLabel">New Post</h4>
-                            </div>
-                            <div class="modal-body">
-                                <form role="form">
-                                    <div class="form-group">
-                                        <textarea class="form-control" rows="5"></textarea>
-                                    </div>
-                                    <button type="submit" class="btn btn-default">Submit Button</button>
-                                    <button type="reset" class="btn btn-default">Reset Button</button>
-                                </form>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">New Post</button>                
             </div>
             <div class="col-lg-5"></div>
         </div>
@@ -183,23 +164,43 @@
     
 
     <!-- jQuery -->
-    <script src="js/jquery.js"></script>
+    <script src="js/jquery.min.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
 
     <!-- Plugin JavaScript -->
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-    <script src="js/classie.js"></script>
-    <script src="js/cbpAnimatedHeader_other.js"></script>
+    <!-- // <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script> -->
+    <!-- // <script src="js/classie.js"></script> -->
+    <!-- // <script src="js/cbpAnimatedHeader_other.js"></script> -->
 
     <!-- Contact Form JavaScript -->
-    <script src="js/jqBootstrapValidation.js"></script>
-    <script src="js/contact_me.js"></script>
+    <!-- // <script src="js/jqBootstrapValidation.js"></script> -->
+    <!-- // <script src="js/contact_me.js"></script> -->
 
     <!-- Custom Theme JavaScript -->
-    <script src="js/agency.js"></script>
+    <!-- // <script src="js/agency.js"></script> -->
 
 </body>
+
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="display: none;">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                <h4 class="modal-title" id="myModalLabel">New Post</h4>
+            </div>
+            <div class="modal-body">
+                <form role="form">
+                    <div class="form-group">
+                        <textarea class="form-control" rows="5"></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-default">Submit Button</button>
+                    <button type="reset" class="btn btn-default">Reset Button</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
 
 </html>
