--- a/new_html/discussion_board.html
+++ b/new_html/discussion_board.html
@@ -82,7 +82,15 @@
 
 
     <!-- Portfolio Grid Section -->
-    <section id="portfolio" class="bg-light-gray">        
+    <section id="portfolio" class="bg-light-gray">    
+
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2 class="section-heading">Posts</h2>
+                <h3 class="section-subheading text-muted">Here you can post any questions you might have and get all of them solved!</h3>
+            </div>                
+        </div>
+
         <div class="row">
             <div class="col-lg-1"></div>
             <div class="col-lg-10">
