add leave button

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
     <button id="sendFileBtn" class="sendFileBtn">发送文件</button>
     <input type="text" id="msgIpt" class="msgIpt">
     <button id="sendBtn" class="sendBtn">发送</button>
+    <button onclick="window.location.href='http://127.0.0.1:8000/discussion/video/';">Leave</button>
   </div>
   <div id="videos">
     <video id="me" autoplay></video>
